--- a/config/locales/catarse_bootstrap/views/pages/hello.pt.yml
+++ b/config/locales/catarse_bootstrap/views/pages/hello.pt.yml
@@ -4,7 +4,7 @@ pt:
       page-title: "Saiba mais"
       hero:
         title: "Vamos juntos fazer a ciência acontecer!"
-        subtitle: "Assista o video e entenda a Entropia Coletiva"
+        subtitle: "Assista ao vídeo e entenda a Entropia Coletiva"
         people_html: "Pessoas já apoiaram pelo menos <br>1 campanha de pesquisa no Entropia Coletiva"
         projects_html: "campanhas já foram <br>financiados no Entropia Coletiva"
         money_html: "Doados para campanhas <br>publicados por aqui"
