--- a/config/locales/catarse_bootstrap/#simple_form.pt.yml
+++ b/config/locales/catarse_bootstrap/#simple_form.pt.yml
@@ -51,6 +51,6 @@ pt:
         online_days: "Você pode escolher entre 1 e 60 dias para a sua campanha."
         video_url: "Link do seu vídeo no Vimeo ou <br/> Youtube."
         about_html: "Fale com paixão e clareza sobre o que será realizado. Esclareça possíveis dúvidas sobre como o dinheiro será utilizado, quem está por trás do projeto, como e quando o projeto será entregue. Transparência atrai mais apoiadores. Lembre-se: seu projeto será acessado por pessoas comuns que decidirão se querem ou não apoiar seu projeto."
-        headline: "Frase no card do projeto para chamar apoiadores. Deve ter no máximo 160 caracteres e resumir bem o projeto."
+        headline: "Frase abaixo da imagem do projeto para chamar apoiadores. Deve ter no máximo 160 caracteres e resumir bem o projeto."
         uploaded_image: "Essa imagem será utilizada como a miniatura de seu projeto (PNG, JPG tamanho 600 x 340)"
 
