--- a/config/locales/catarse_bootstrap/views/projects/#new.pt.yml
+++ b/config/locales/catarse_bootstrap/views/projects/#new.pt.yml
@@ -20,7 +20,7 @@ pt:
       form:
         blocks:
           first:
-            title: "Bem Vindo!"
+            title: "Bem vindo(a)!"
             description: "Preencha as informações abaixo para iniciar o rascunho de sua campanha."
 
         info:
