--- a/config/locales/catarse_bootstrap/views/projects/index.pt.yml
+++ b/config/locales/catarse_bootstrap/views/projects/index.pt.yml
@@ -1,8 +1,9 @@
  pt:
   projects:
     index_header:
-      subtitle: Financie a ciência brasileira de maneira colaborativa e torne-se parte de algo
-        maior. Promova uma Entropia Coletiva! Você é a engrenagem que falta nesta história.
+      subtitle: Primeira plataforma de financiamento coletivo de ciência do Brasil. Faça parte desta 
+        comunidade e financie a ciência brasileira de maneira colaborativa! 
+        Entropia Coletiva! Faça a ciência acontecer!
       title: Faça parte do avanço científico
     index:
       title: 'Entropia Coletiva'
